<resources>
    <string name="app_name">Przeklęty grymuar</string>

    <string name="games">Gry</string>
    <string name="players">Gracze</string>
    <string name="history">Rozgrywki</string>
    <string name="stats_fragment">Stats</string>
    <string name="add">Dodaj</string>
    <string name="new_game">Nowa gra</string>
    <string name="next">Dalej</string>
    <string name="back">Wróc</string>
    <string name="game_name">Nazwa gry</string>
    <string name="requires_scenario">Wymaga scenariusza</string>
    <string name="scenario_name">Nazwa scenarusza</string>
    <string name="expansion_name">Nazwa dodatku</string>
    <string name="min_player_number">Minimalna liczba graczy:</string>
    <string name="max_player_number">Maksymalna liczba graczy:</string>
    <string name="no_name_toast">Pole nazwy nie może być puste</string>
    <string name="no_scenario">Ta gra musi posidac przynajmniej jeden scenariusz</string>
    <string name="empty_scenario_name">Nazwa scenariusza nie może być pusta</string>
    <string name="delete_scenario_description">Usuwa scenariusz</string>
    <string name="no_number_of_players">Pola liczby graczy nie mogą być puste</string>
    <string name="min_grater_then_max">Minimalna liczba graczy nie może być większa od maksymalnej</string>
    <string name="title_game_type">Typ rozgrywki</string>
    <string name="title_scenarios">Scenariusze:</string>
    <string name="title_expansions">Dodatki:</string>
    <string name="title_number_of_players">Liczba graczy</string>
    <string name="duplicate_scenario_name">Nazwa scenariusza nie może się powtarzać</string>
    <string name="duplicate_expansion_name">Nazwa dodatku nie może się powtarzać</string>
    <string name="add_player">Dodaj gracza</string>
    <string name="player_name">Nazwa gracza</string>
    <string name="no_game_chosen">Wybierz grę</string>
    <string name="all">Wszystkie</string>
    <string name="no_scenario_chosen">Wybierz scenariusz</string>
    <string name="default_scenario">Brak</string>
    <string name="wrong_number_of_players">Zaznacz liczbę graczy między %1d i %1d</string>
    <string name="max_eql_min">Liczba zaznaczonych graczy musi wynosić </string>
    <string name="game_name_used">Gra o takiej nazwie już istnieje</string>
    <string name="chose_game">Gra</string>
    <string name="chose_scenario">Scenariusz</string>
    <string name="chose_expansion">Dodatki</string>
    <string name="chose_players">Gracze</string>
    <string name="chose_outcome">Wynik</string>
    <string name="overlord">Overlord</string>
    <string name="victory">Zwycięstwo</string>
    <string name="defeat">Porażka</string>
    <string name="heroes">Bohaterowie</string>
    <string name="unfinished">Nieskończona</string>
    <string name="draw">Remis</string>
    <string name="place">Miejsce %1d</string>
    <string name="draw_place_empty">Puste pole remisu</string>
    <string name="wrong_place_order">Wypełnij pola miejsc od pierwszego</string>
    <string name="no_player_at_first_place">Wypełnij przynajmniej jedno miejsce lub oznacz grę jako nieskończoną</string>
    <string name="comment_hint">Napisz komentarz</string>
    <string name="comment_title">Komentarze</string>
    <string name="no_games">Dodaj przynajmniej jedną grę</string>
    <string name="no_players">Dodaj przynajmniej jedngo gracza</string>
    <string name="error">Error</string>
    <string name="date">Data</string>
    <string name="result">Wynik</string>
    <string name="scenario">Scenariusz</string>
    <string name="delete_match_dialog_message">Usuniąc rozgrywkę?</string>
    <string name="cancel">Anuluj</string>
    <string name="no_item">brak</string>
    <string name="player_name_used">Gracz o takiej nazwie już istnieje</string>
    <string name="add_scenario">Przycisk dodający scenariusz</string>
    <string name="add_scenario_title">Dodaj scenariusz</string>
    <string name="add_expansions_button_desc">Przycisk dodający dodatek</string>
    <string name="add_expansion_title">Dodaj dodatek</string>
    <string name="empty_expansion_name">Nazwa dodatku nie może być pusta</string>
    <string name="game">Gra</string>
    <string name="expansions">Dodatki</string>
    <string name="edit_player_dialog_title">Zmień nazwe</string>
    <string name="new_expan_name">Nowa nazwa</string>
    <string name="game_info_scenario_title">Scenariusz</string>
    <string name="delete_expansion">Usunąc dodatek </string>
    <string name="change_game_name">Zmień nazwę</string>
    <string name="title_number_of_games">Liczba gier</string>
    <string name="title_most_games">Najwięcej gier w ostatnim roku</string>
    <string name="choose_text">-</string>
    <string name="choose_expansions">Wybierz dodatki</string>
    <string name="delete">Usunąć &lt;b>%s&lt;/b>?</string>
    <string name="delete_used">Usunąć &lt;b>%s&lt;/b> i powiązane rozgrywki (%d)?</string>
    <string name="filter">Filtruj</string>
    <string name="clear">Wyczyść</string>
    <string name="expansion">Dodatek</string>
    <string name="player">Gracz</string>
    <string name="from">Od:</string>
    <string name="to">Do</string>
    <string name="date_floor_button">Początku</string>
    <string name="date_celling_button">Teraz</string>
    <string name="ok">OK</string>
    <string name="no_matches">BRAK ROZGRYWEK</string>

    <string-array name="game_types">
        <item>Versus</item>
        <item>Coop</item>
        <item>Overlord</item>
    </string-array>

</resources>
