<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20sp"
    android:paddingBottom="10dp">

    <ViewFlipper
        android:id="@+id/new_match_view_flipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:measureAllChildren="false"
        android:layout_gravity="center">

        <ScrollView
             
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/game_button_group"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>
        </ScrollView>

        <ScrollView
             
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/scenarios_view"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </RadioGroup>

        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/toggle_all_expansions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <ScrollView
                 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/expansions_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>

            </ScrollView>
        </LinearLayout>


        <ScrollView
             
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/players_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </LinearLayout>

        </ScrollView>

        <Spinner
            android:id="@+id/overlord_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/unfinished_checkbox"
                android:text="@string/unfinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

                <LinearLayout
                    android:id="@+id/game_outcome_view"
                    android:minWidth="150dp"
                    android:divider="@android:color/black"
                    android:showDividers="middle"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>
            </ScrollView>

        </LinearLayout>


        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false">

        </DatePicker>

        <EditText
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/comments"
            android:linksClickable="true"
            android:autoLink="all"
            android:hint="@string/comment_hint"
            android:gravity="top"
            android:layout_width="270dp"
            android:layout_height="200dp"
            android:autofillHints="@string/comment_hint"
            android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
            android:background="@null"
            android:imeOptions="actionNone"/>

    </ViewFlipper>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>