<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:scrollbars="none"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Match.MatchInfoFragment">


        <LinearLayout
            android:id="@+id/game_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game" />

            <View
                android:id="@+id/game_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/game_name"
                style="@style/PrimaryText"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scenario_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scenario_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scenario" />

            <View
                android:id="@+id/scenarios_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/scenario"
                style="@style/PrimaryText"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/outcome_title"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/result"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/outcome"
                style="@style/PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/error"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/expansions_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/expansions_title"
                    style="@style/TitleStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/expansions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/edit_expansion_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/edit_expansion_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:drawable/ic_menu_edit" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/expansions_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:id="@+id/expansions_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/divider"
                android:showDividers="middle"
                android:padding="8dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/players_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/players_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleStyle"
                android:text="@string/players"/>

            <View
                android:id="@+id/players_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <LinearLayout
                android:id="@+id/players_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/divider"
                android:showDividers="middle"
                android:padding="8dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:background="@drawable/border"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_title"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/error"
                style="@style/PrimaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/comments_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comments_title"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment_title" />

            <View
                android:id="@+id/comments_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PrimaryText"
                android:layout_margin="8dp"
                android:text="@string/error"
                android:linksClickable="true"
                android:autoLink="all" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>